Fix checkboxes on iOS

--- a/src/styles/checkbox.less
+++ b/src/styles/checkbox.less
@@ -3,8 +3,8 @@ input[type='checkbox'] {
   width: 1em;
   height: 1em;
   display: inline-block;
-  transform: translateY(-1px);
   margin-right: 8px;
+  appearance: none;
 
   &::before,
   &::after {
@@ -14,6 +14,8 @@ input[type='checkbox'] {
     opacity: 1;
     z-index: 1;
     cursor: pointer;
+    top: -1px;
+    left: -1px;
   }
 
   &::before {
